peerlist overflow problem fixed (#166)

--- a/src/scss/settings/peers.scss
+++ b/src/scss/settings/peers.scss
@@ -1,11 +1,11 @@
 .content__peers {
     .node-info__peers {
-        height: 100%;
+        height: auto;
         margin-top: 20px;
 
         table {
             width: 100%;
-            margin-bottom: 30px;
+            margin-bottom: 70px;
             border-collapse: collapse;
         }
 
